--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Ideal for simple minimalist websites.
 		<a href="https://andreobriennz.com">&copy;Andre O'Brien</a>
 	</footer>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
 	<script src="js/dongle.js"></script>
 	<script src="js/controller.js"></script>
 
