--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>VariableCSS</title>
 
+	<link rel="icon" type="image/png" href="img/var-logo.png">
+
 	<link rel="stylesheet" type="text/css" href="css/variable.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -10,7 +12,7 @@
 	<br> 
 	<nav class="clear-nav">
 		<a href="#home" class="logo">
-			<img src="#" class="clear-nav">
+			<img src="img/var-logo.png" class="clear-nav" height="30px" width="30px">
 		</a>
 		<a href="#home">Home</a>
 		<a href="#get-started">Get Started</a>
@@ -35,11 +37,11 @@
 
 	<div class="card full-screen-card" id="get-started">
 		<h2 id="hierarchy">Getting Started</h2>
-		<p><strong>Add CSS</strong><br>Easily include VariableCSS with one of the following methods.<br>
+		<p><strong>Add CSS...</strong><br>Easily include VariableCSS with one of the following methods.<br>
 		Option 1. Link to this CSS file in the header of your HTML. Make sure you add it prior to your own CSS document: <span class="underline">css/variable.css</span><br>
 		Option 2. Download the CSS file<a href="css/variable.css" class="underline">here.</a>
 		</p>
-		<p><strong>Add SASS</strong><br>Easily include the SASS version of VariableCSS with one of the following methods.<br>
+		<p><strong>...Or add SASS</strong><br>Want to take advantage of SASS variables and other features? Include the SASS version of VariableCSS with one of the following methods.<br>
 		Option 1. Link to this CSS file in the header of your HTML. Make sure you add it prior to your own CSS document: <span class="underline">sass/variable.sass</span><br>
 		Option 2. Download the CSS file<a href="sass/variable.scss" class="underline">here.</a>
 		</p>
@@ -48,7 +50,17 @@
 		Option 2. Download the JavaScript file<a href="js/variable.js" class="underline">here.</a>
 		</p>
 		<p><strong>Don't forget fonts!</strong><br>
-		Add Roboto font with this link <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"&gt;</span></p>
+		Add Roboto font with this link <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"&gt;</span><br>
+		Add Open Sans font with this link <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"&gt;</span><br>
+		Add Pacifico font with this link <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"&gt;</span><br>
+		Add Handlee font with this link <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet"&gt;</span><br>
+
+		</p>
+
+		
+
+		
+
 	</div>
 
 	<div class="card full-screen-card" id="components">
@@ -74,6 +86,13 @@
 		<div class="card eigth-screen-card light-grey this4">.light-grey</div>
 
 		<p><strong>Note:</strong>Fonts types as classes and variables are not yet supported. Stay tuned for a future release.</p>
+		<p><strong>Tips for choosing fonts:</strong>
+			<ol>
+				<li>Keep it simple. Sans-serif fonts are usually a safe choice. Be especially careful with decorateive and script fonts.</li>
+				<li>Avoid very similar looking fonts on the same website.</li>
+				<li>Aim to use only a couple fonts, and make sure they convey a similar mood.</li>
+			</ol>
+		</p>
 	</div>
 
 	<div class="card full-screen-card" id="menus">
@@ -161,7 +180,7 @@ Ideal for simple minimalist websites.
 		<a href="#cssvar">CSS Variable Colors</a>
 		<a href="#jsvar">JS Plugin</a>
 		<br><br>
-		<a href="https://andreobriennz.com">&copy;Andre O'Brien</a>
+		<a href="https://andreobriennz.com">Created by Andre O'Brien</a>
 	</footer>
 
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
