--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>VariableCSS</title>
 
-	<link rel="icon" type="image/png" href="img/var-logo.png">
+	<!-- <link rel="icon" type="image/png" href="img/var-logo.png"> -->
+	<link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
 	<link rel="stylesheet" type="text/css" href="css/variable.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -12,12 +13,15 @@
 	<br> 
 	<nav class="clear-nav">
 		<a href="#home" class="logo">
-			<img src="img/var-logo.png" class="clear-nav" height="30px" width="30px">
+			<img src="img/logo.png" class="clear-nav" height="30px" width="30px">
 		</a>
 		<a href="#home">Home</a>
 		<a href="#get-started">Get Started</a>
 		<a href="#components">Components</a>	
 	</nav>
+	<div class="banner">
+		<strong class="important-text">IMPORTANT: This framework is currently under development.<br>It is not recommended for professional use at this stage.</strong>
+	</div>
 	<br>
 
 <!-- 	<header class="triangle-nav">
@@ -37,17 +41,14 @@
 
 	<div class="card full-screen-card" id="get-started">
 		<h2 id="hierarchy">Getting Started</h2>
-		<p><strong>Add CSS...</strong><br>Easily include VariableCSS with one of the following methods.<br>
-		Option 1. Link to this CSS file in the header of your HTML. Make sure you add it prior to your own CSS document: <span class="underline">css/variable.css</span><br>
-		Option 2. Download the CSS file<a href="css/variable.css" class="underline">here.</a>
+		<p><strong>Add CSS...</strong><br>
+		Download the CSS file<a href="css/variable.css" class="underline">here.</a>
+		<p><strong>...Or add SASS</strong><br>
+		Download the SASS file<a href="sass/variable.scss" class="underline">here.</a>
 		</p>
-		<p><strong>...Or add SASS</strong><br>Want to take advantage of SASS variables and other features? Include the SASS version of VariableCSS with one of the following methods.<br>
-		Option 1. Link to this CSS file in the header of your HTML. Make sure you add it prior to your own CSS document: <span class="underline">sass/variable.sass</span><br>
-		Option 2. Download the CSS file<a href="sass/variable.scss" class="underline">here.</a>
-		</p>
-		<p><strong>Want to add the JavaScript plugin?</strong><br>Optionally, you can also include the VariableJS plugin by the same method:<br>
-		Option 1. Link to this JavaScript file in the footer of your HTML. Make sure you add it prior to your own JavaScript document:<span class="underline">js/variable.js </span><br>
-		Option 2. Download the JavaScript file<a href="js/variable.js" class="underline">here.</a>
+		<p><strong>JavaScript plugin not yet available.</strong>
+		<!-- <br>Optionally, you can also include the VariableJS plugin by the same method:<br>
+		Download the JavaScript file<a href="js/variable.js" class="underline">here.</a> -->
 		</p>
 		<p><strong>Don't forget fonts!</strong><br>
 		Add Roboto font with this link <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"&gt;</span><br>
@@ -86,8 +87,8 @@
 		<div class="card eigth-screen-card light-grey this4">.light-grey</div>
 
 		<p><strong>Note:</strong>Fonts types as classes and variables are not yet supported. Stay tuned for a future release.</p>
-		<p><strong>Tips for choosing fonts:</strong>
-			<ol>
+		<p class="hide"><strong>Tips for choosing fonts:</strong>
+			<ol class="hide">
 				<li>Keep it simple. Sans-serif fonts are usually a safe choice. Be especially careful with decorateive and script fonts.</li>
 				<li>Avoid very similar looking fonts on the same website.</li>
 				<li>Aim to use only a couple fonts, and make sure they convey a similar mood.</li>
@@ -129,11 +130,11 @@ Ideal for simple minimalist websites.
 		</p>
 		<!-- <div class="card eigth-screen-card dark-grey-bg"><strong>Classes:</strong><br>.card <br>.eigth-screen-card</div>
 		<br> -->
-		<div class="rounded-card quarter-screen-card dark-grey"><strong>Classes:</strong><br>.rounded-card <br>.quarter-screen-card</div>
+		<div class="rounded-card quarter-screen-card medium-green"><strong>Classes:</strong><br>.rounded-card <br>.quarter-screen-card</div>
 		<br>
-		<div class="square-card third-screen-card dark-grey"><strong>Classes:</strong><br>.square-card <br>.third-screen-card</div>
+		<div class="square-card third-screen-card medium-green"><strong>Classes:</strong><br>.square-card <br>.third-screen-card</div>
 		<br>
-		<div class="card half-screen-card dark-grey"><strong>Classes:</strong><br>.card <br>.half-screen-card</div>
+		<div class="card half-screen-card medium-green"><strong>Classes:</strong><br>.card <br>.half-screen-card</div>
 		<br>
 	</div>
 
@@ -166,8 +167,8 @@ Ideal for simple minimalist websites.
 	<div class="card full-screen-card background" id="jsvar">
 		<h2 class="hierarchy">JS Plugin</h2>
 		<p class="main">Now you can  use JavaScript to update HTML and CSS!</p>
-		<button onclick="darkTheme()">Change to dark theme</button>
-		<button onclick="lightTheme()">Change to light theme</button>
+		<button onclick="darkTheme()" class="button large-button">Change to dark theme</button>
+		<button onclick="lightTheme()" class="button large-button">Change to light theme</button>
 	</div>
 
 	<footer class="footer-bottom">
