Refactored more into SASS
Refactored into SASS where it wasn’t already

--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
 
 	<div class="card full-screen-card" id="components">
 		<h2 id="colors">Add Colors</h2>
-		<p><strong>Here are the twelve colors of the VariableCSS framework.</strong><br>To add a color, simply add the class listed on the box of that color.<br>They can also be used as text colors by removing the '-bg' from the class. <br><br>Tip: When adding multiple classes it's recommended to add the color class last to avoid specificity conflicts.</p>
+		<p><strong>Here are the twelve colors of the VariableCSS framework.</strong><br>To add a color, simply add the class listed on the box of that color.<br>They can also be used as text colors by removing the '-bg' from the class.</p>
 
-		<div class="card eigth-screen-card magenta">.magenta</div>
-		<div class="card eigth-screen-card red">.red</div>
-		<div class="card eigth-screen-card orange">.orange</div>
-		<div class="card eigth-screen-card amber">.amber</div>
-		<div class="card eigth-screen-card yellow">.yellow</div>
+		<div class="card eigth-screen-card magenta-bg">.magenta-bg</div>
+		<div class="card eigth-screen-card red-bg">.red-bg</div>
+		<div class="card eigth-screen-card orange-bg">.orange-bg</div>
+		<div class="card eigth-screen-card amber-bg">.amber-bg</div>
+		<div class="card eigth-screen-card yellow-bg">.yellow-bg</div>
 
-		<div class="card eigth-screen-card medium-green">.medium-green</div>
+		<div class="card eigth-screen-card emerald-bg">.emerald-bg</div>
 
-		<div class="card eigth-screen-card blue-green">.blue-green</div>
-		<div class="card eigth-screen-card light-blue">.light-blue</div>
-		<div class="card eigth-screen-card medium-blue">.medium-blue</div>
-		<div class="card eigth-screen-card dark-blue">.dark-blue</div>
+		<div class="card eigth-screen-card teal-bg">.teal-bg</div>
 
-		<div class="card eigth-screen-card dark-grey">.dark-grey</div>
-		<div class="card eigth-screen-card light-grey this4">.light-grey</div>
+		<div class="card eigth-screen-card light-blue-bg">.light-blue-bg</div>
+		<div class="card eigth-screen-card medium-blue-bg">.medium-blue-bg</div>
+		<div class="card eigth-screen-card dark-blue-bg">.dark-blue-bg</div>
+
+		<div class="card eigth-screen-card dark-grey-bg">.dark-grey-bg</div>
+		<div class="card eigth-screen-card light-grey-bg this4">.light-grey-bg</div>
 		<br><br>
-
 	</div>
 
 	<!-- <div class="card full-screen-card" id="menus">
@@ -128,11 +128,7 @@
 
 	<!-- <div class="card full-screen-card" id="cssvar">
 		<h2>CSS and SASS Variable Colors</h2>
-		<p><strong>Now you can use CSS variables to update colors</strong><br>The names of the variables are the same as the name names of the classes for those colors, except it says with '--'.<br><br><strong>Examples are shown below:</strong></p>
-		<div class="card quarter-screen-card this">background-color: var(--amber);<br>color: var(--dark-grey);</div>
-		<div class="card quarter-screen-card this2">background-color: var(--magenta);<br>color: var(--light-grey);</div>
-		<div class="card quarter-screen-card this3">background-color: var(--medium-blue);<br>color: var(--light-grey);</div>
-		<br>
+	
 		<p>Note: CSS Variables have good support in most browsers, including Chrome, Firefox and Safari. However they are not yet supported in IE or Edge. Therefore, if using them, it is recommended to ensure the website is usable without CSS variables.<br>
 		SASS variables have no known issues.</p>
 	</div> -->
@@ -155,8 +151,8 @@
 	</footer>
 
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
-	<script src="js/variable.js"></script>
-	<script src="js/controller.js"></script>
+	<!-- <script src="js/variable.js"></script> -->
+	<!-- <script src="js/controller.js"></script> -->
 
 </body>
 </html>
