--- a/home.html
+++ b/home.html
@@ -2,11 +2,11 @@
 <html lang="en-nz">
 <head>
 
-	<title>Variable Framework</title>
+	<title>Vario Micro-Framework</title>
 
 	<link rel="icon" type="image/x-icon" href="img/logo.png">
 
-	<link rel="stylesheet" type="text/css" href="css/variable.css">
+	<link rel="stylesheet" type="text/css" href="css/vario.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,18 +32,19 @@
 
 	<div class="card full-screen-card" id="get-started">
 		<h2 id="hierarchy">Getting Started</h2>
-		<p><strong>Welcome to the Variable Framework.</strong><br>
-		It's an ultra lightweight stripped back framework which acts as a very simple boilerplate, and lets you add colors and fonts more easily.<br>
+		<p><strong>Welcome to the Vario Micro-Framework.</strong><br>
+		Vario means variable in both Italian and Spanish, and that's what this is. With the main file weighing in at only 3kB, the framework is ultralight and fast. Vario is little more than a boilerplate, some optional fonts, and a color palate. This allows Vario to be as lightweight as possible. <br>
+		Vario combines the performance and flexibility for pure code, with a built in color palate, fonts and minimal biolerplate.<br>
 		To get started just add the following two files to your project and edit the second one, which is all set up with preset colours etc.</p>
 		<p><strong>Download the framework...</strong><br>
-		Download the SASS framework (you generally won't edit this file)<a download href="sass/variable.scss" class="underline">here.</a>
+		Download the SASS framework (you generally won't edit this file)<a download href="sass/vario.scss" class="underline">here.</a>
 		<p><strong>...then download and edit this file</strong><br>
 		Download the SASS file<a download href="sass/my.scss" class="underline">here.</a>
 		<!-- <p><strong>...or alternatively you can use CSS (but you'll miss out on the great features of SASS</strong><br>
 		Download the CSS file<a download href="css/css-version.css" class="underline">here.</a> -->
 		</p>
 		<p><strong>Don't forget fonts!</strong><br>
-		For sans-serif fonts we recommend Roboto: <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"&gt;</span><br>
+		For sans-serif fonts we recommend Roboto. Sample link: <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"&gt;</span><br>
 		<!-- For serif fonts we recommend _____: <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"&gt;</span><br> -->
 		<!-- For script fonts we recommend _____: <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"&gt;</span><br> -->
 		<!-- Add Handlee font with this link <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet"&gt;</span><br> -->
@@ -52,7 +53,7 @@
 
 	<div class="card full-screen-card" id="components">
 		<h2 id="colors">Add Colors</h2>
-		<p><strong>Here are the twelve colors of the Variable framework.</strong><br>To add a color, simply add the class listed on the box of that color.<br>They can also be used as text colors by removing the '-bg' from the class.</p>
+		<p><strong>Here are the twelve colors of the Vario framework.</strong><br>To add a color, simply add the class listed on the box of that color.<br>They can also be used as text colors by removing the '-bg' from the class.</p>
 
 		<div class="card eigth-screen-card magenta-bg">.magenta-bg</div>
 		<div class="card eigth-screen-card red-bg">.red-bg</div>
@@ -150,10 +151,6 @@
 		<br><br>
 		<a href="https://andreobriennz.com">Created by Andre O'Brien</a>
 	</footer>
-
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
-	<!-- <script src="js/variable.js"></script> -->
-	<!-- <script src="js/controller.js"></script> -->
 
 </body>
 </html>
