--- a/home.html
+++ b/home.html
@@ -33,8 +33,7 @@
 	<div class="card full-screen-card" id="get-started">
 		<h2 id="hierarchy">Getting Started</h2>
 		<p><strong>Welcome to the Vario Micro-Framework.</strong><br>
-		Vario means variable in both Italian and Spanish, and that's what this is. With the main file weighing in at only 3kB, the framework is ultralight and fast. Vario is little more than a boilerplate, some optional fonts, and a color palate. This allows Vario to be as lightweight as possible. <br>
-		Vario combines the performance and flexibility for pure code, with a built in color palate, fonts and minimal biolerplate.<br>
+		Vario means variable in both Italian and Spanish, and that's what this framework aims to be. Vario is essentially just a boilerplate, some optional fonts, and a color palate. This allows Vario to be as lightweight as possible, around 3kB in fact.<br>
 		To get started just add the following two files to your project and edit the second one, which is all set up with preset colours etc.</p>
 		<p><strong>Download the framework...</strong><br>
 		Download the SASS framework (you generally won't edit this file)<a download href="sass/vario.scss" class="underline">here.</a>
