--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 	<br> 
 	<nav class="clear-nav">
 		<a href="#home" class="logo">
-			<img src="img/logo.png" class="clear-nav" height="30px" width="30px">
+			<img src="img/logo.png" class="clear-nav" height="30px" width="30px" alt="Vario logo with text saying var">
 		</a>
 		<!-- <a href="#home">Home</a> -->
 		<a href="#get-started">Get Started</a>
@@ -26,11 +26,12 @@
 		<a href="#cards">Cards</a>
 	</nav>
 	<div class="banner">
-		<strong class="important-text">NOTE: This framework is currently under development</strong>
+		<strong class="important-text">This framework is currently in Beta and may change frequently</strong>
 	</div>
 	<br>
-
+	<h1 class="dark-grey">Vario Micro-Framework</h1>
 	<div class="card full-screen-card" id="get-started">
+
 		<h2 id="hierarchy">Getting Started</h2>
 		<p><strong>Welcome to the Vario Micro-Framework.</strong><br>
 		Vario means variable in both Italian and Spanish, and that's what this framework aims to be. Vario is essentially just a boilerplate, some optional fonts, and a color palate. This allows Vario to be as lightweight as possible, around 3kB in fact.<br>
@@ -54,22 +55,22 @@
 		<h2 id="colors">Add Colors</h2>
 		<p><strong>Here are the twelve colors of the Vario framework.</strong><br>To add a color, simply add the class listed on the box of that color.<br>They can also be used as text colors by removing the '-bg' from the class.</p>
 
-		<div class="card eigth-screen-card magenta-bg">.magenta-bg</div>
-		<div class="card eigth-screen-card red-bg">.red-bg</div>
-		<div class="card eigth-screen-card orange-bg">.orange-bg</div>
-		<div class="card eigth-screen-card amber-bg">.amber-bg</div>
-		<div class="card eigth-screen-card yellow-bg">.yellow-bg</div>
+		<div class="card third-screen-card magenta-bg">.magenta-bg</div>
+		<div class="card third-screen-card red-bg">.red-bg</div>
+		<div class="card third-screen-card orange-bg">.orange-bg</div>
+		<div class="card third-screen-card amber-bg">.amber-bg</div>
+		<div class="card third-screen-card yellow-bg">.yellow-bg</div>
 
-		<div class="card eigth-screen-card emerald-bg">.emerald-bg</div>
+		<div class="card third-screen-card emerald-bg">.emerald-bg</div>
 
-		<div class="card eigth-screen-card teal-bg">.teal-bg</div>
+		<div class="card third-screen-card teal-bg">.teal-bg</div>
 
-		<div class="card eigth-screen-card light-blue-bg">.light-blue-bg</div>
-		<div class="card eigth-screen-card medium-blue-bg">.medium-blue-bg</div>
-		<div class="card eigth-screen-card dark-blue-bg">.dark-blue-bg</div>
+		<div class="card third-screen-card light-blue-bg">.light-blue-bg</div>
+		<div class="card third-screen-card medium-blue-bg">.medium-blue-bg</div>
+		<div class="card third-screen-card dark-blue-bg">.dark-blue-bg</div>
 
-		<div class="card eigth-screen-card dark-grey-bg">.dark-grey-bg</div>
-		<div class="card eigth-screen-card light-grey-bg this4">.light-grey-bg</div>
+		<div class="card third-screen-card dark-grey-bg">.dark-grey-bg</div>
+		<div class="card third-screen-card light-grey-bg this4">.light-grey-bg</div>
 		<br><br>
 	</div>
 
