--- a/home.html
+++ b/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en-nz">
+<html lang="en">
 <head>
 
-	<title>Vario Micro-Framework</title>
+	<title>Vario Library</title>
 
 	<link rel="icon" type="image/x-icon" href="img/logo.png">
 
@@ -20,24 +20,23 @@
 		<a href="#home" class="logo">
 			<img src="img/logo.png" class="clear-nav" height="30px" width="30px" alt="Vario logo with text saying var">
 		</a>
-		<!-- <a href="#home">Home</a> -->
 		<a href="#get-started">Get Started</a>
 		<a href="#colors">Colours</a>
 		<a href="#cards">Cards</a>
 	</nav>
 	<div class="banner">
-		<strong class="important-text">This framework is currently in Beta and may change frequently</strong>
+		<strong class="important-text">This library is currently in Beta and may change frequently</strong>
 	</div>
 	<br>
-	<h1 class="dark-grey">Vario Micro-Framework</h1>
+	<h1 class="dark-grey">Vario Library</h1>
 	<div class="card full-screen-card" id="get-started">
 
 		<h2 id="hierarchy">Getting Started</h2>
-		<p><strong>Welcome to the Vario Micro-Framework.</strong><br>
-		Vario means variable in both Italian and Spanish, and that's what this framework aims to be. Vario is essentially just a boilerplate, some optional fonts, and a color palate. This allows Vario to be as lightweight as possible, around 3kB in fact.<br>
+		<p><strong>Welcome to the Vario library.</strong><br>
+		Vario means variable in both Italian and Spanish, and that's what this library aims to be. Vario is essentially a boilerplate, some optional fonts, and a color palate. This allows Vario to be as lightweight as possible, around 3kB in fact.<br>
 		To get started just add the following two files to your project and edit the second one, which is all set up with preset colours etc.</p>
-		<p><strong>Download the framework...</strong><br>
-		Download the SASS framework (you generally won't edit this file)<a download href="sass/vario.scss" class="underline">here.</a>
+		<p><strong>Download the library...</strong><br>
+		Download the SASS library (you generally won't edit this file)<a download href="sass/vario.scss" class="underline">here.</a>
 		<p><strong>...then download and edit this file</strong><br>
 		Download the SASS file<a download href="sass/my.scss" class="underline">here.</a>
 		<!-- <p><strong>...or alternatively you can use CSS (but you'll miss out on the great features of SASS</strong><br>
@@ -53,7 +52,7 @@
 
 	<div class="card full-screen-card" id="components">
 		<h2 id="colors">Add Colors</h2>
-		<p><strong>Here are the twelve colors of the Vario framework.</strong><br>To add a color, simply add the class listed on the box of that color.<br>They can also be used as text colors by removing the '-bg' from the class.</p>
+		<p><strong>Here are the twelve colors of the Vario library.</strong><br>To add a color, simply add the class listed on the box of that color.<br>They can also be used as text colors by removing the '-bg' from the class.</p>
 
 		<div class="card third-screen-card magenta-bg">.magenta-bg</div>
 		<div class="card third-screen-card red-bg">.red-bg</div>
