--- a/home.html
+++ b/home.html
@@ -29,10 +29,10 @@
 	</div>
 	<br>
 	<h1 class="dark-grey">Vario Library</h1>
+	
 	<div class="card full-screen-card" id="get-started">
-
 		<h2 id="hierarchy">Getting Started</h2>
-		<p><strong>Welcome to the Vario library.</strong><br>
+		<p><strong>Welcome to the Vario color and font library.</strong><br>
 		Vario means variable in both Italian and Spanish, and that's what this library aims to be. Vario is essentially a boilerplate, some optional fonts, and a color palate. This allows Vario to be as lightweight as possible, around 3kB in fact.<br>
 		To get started just add the following two files to your project and edit the second one, which is all set up with preset colours etc.</p>
 		<p><strong>Download the library...</strong><br>
