Fixed broken link

--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="img/logo.png">
 
 	<link rel="stylesheet" type="text/css" href="css/vario.css">
+	<link rel="stylesheet" type="text/css" href="css/alpha.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
