added mixin capabilities to sass files and folders; added fonts section to the library, incl svg images

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
 	<link rel="icon" type="image/x-icon" href="img/logo.png">
 
-	<link rel="stylesheet" type="text/css" href="css/vario.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/alpha.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -22,8 +22,8 @@
 			<img src="img/logo.png" class="clear-nav" height="30px" width="30px" alt="Vario logo with text saying var">
 		</a>
 		<a href="#get-started">Get Started</a>
+		<a href="#fonts">Fonts</a>
 		<a href="#colors">Colours</a>
-		<a href="#cards">Cards</a>
 	</nav>
 	<div class="banner">
 		<strong class="important-text">This library is currently in Beta and may change frequently</strong>
@@ -43,13 +43,61 @@
 		<!-- <p><strong>...or alternatively you can use CSS (but you'll miss out on the great features of SASS</strong><br>
 		Download the CSS file<a download href="css/css-version.css" class="underline">here.</a> -->
 		</p>
-		<p><strong>Don't forget fonts!</strong><br>
-		For sans-serif fonts we recommend Roboto. Sample link: <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"&gt;</span><br>
-		<!-- For serif fonts we recommend _____: <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"&gt;</span><br> -->
-		<!-- For script fonts we recommend _____: <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"&gt;</span><br> -->
-		<!-- Add Handlee font with this link <span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet"&gt;</span><br> -->
-		</p>
 	</div>
+
+	<div class="card full-screen-card" id="components">
+		<h2 id="fonts">Add Fonts</h2>
+		<p>We've picked a number of go-to fonts to get you started. Example html links are provided for pnthe regular style only.</p>
+		
+		<h3>Heading fonts</h3>
+		<p><strong>Oswald</strong></p>
+		<p>Owswald is <em>san-serif</em> typeface based on classic gothic and grotesque styles. It has a condensed, thick and tall appearance, perfect for bold headings. Pair Oswald with Merriweather, Roboto or Open Sans.<br>
+		<span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"&gt;</span></p>
+		<img class="font-img" src="img/oswald-min.png">
+
+		<p><strong>Abril Fatface</strong></p>
+		<p>Abril Fatface is a modern <em>serif</em> typeface and is an elegant headline choice. Only the regular style is available for free from google fonts. Pair Abril Fatface with Open Sans or Roboto.<br>
+		<span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet"&gt;</span></p>
+		<img class="font-img" src="img/abril-fatface-min.png">
+
+		<p><strong>Playfair Display</strong></p>
+		<p>Playfair Display is a transitional <em>serif</em> typeface. It is best used for titles and headlines and has a classy, feminine feel. Pair Playfair Display with Rubik or Open Sans.<br>
+		<span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"&gt;</span></p>
+		<img class="font-img" src="img/playfair-display-min.png">
+
+		<p><strong>Lobster 2</strong></p>
+		<p>Lobster 2 is a fun <em>script</em> typeface ideal for heaedings. Pair Lobster 2 with Roboto or Rubik.<br>
+		<span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet"&gt;</span></p>
+		<img class="font-img" src="img/lobster-2-min.png">
+
+		<p><strong>Roboto Slab</strong></p>
+		<p>Roboto slab is a <em>slab serif</em> typeface. As it doesn't have any italic styles, I'd refrain from using it for body copy. Pair Roboto Slab with Roboto.<br>
+		<span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"&gt;</span></p>
+		<img class="font-img" src="img/roboto-slab-min.png">
+
+		<h3>Paragraph fonts</h3>
+		<p><strong>Roboto</strong></p>
+		<p>Roboto is a grotesque <em>sans-serif</em> typeface, and is the standard typeface for Android. It is very legible on screens of all sizes. Pair Roboto with Roboto Slab, Lobster 2 or Abril Fatface.<br> 
+		<span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"&gt;</span></p>
+		<img class="font-img" src="img/roboto-min.png">
+
+		<p><strong>Open Sans</strong></p>
+		<p>Open Sans is a humanist <em>sans-serif</em> typeface. It is an extremely versatile font and is found all over the web. It has an open and friendly vibe, and is great used for body copy. Pair Open Sans with Merriweather, Oswald or Abril Fatface.<br> 
+		<span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"&gt;</span></p>
+		<img class="font-img" src="img/open-sans-min.png">
+
+		<p><strong>Merriweather</strong></p>
+		<p>Merriweather is a <em>serif</em> typeface designed to be highly visible on screens. Pair Merriweather with Oswald. Merriweather also works beautifully as a heading typeface, and can be paired with Open Sans or Rubik body copy.<br>
+		<span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"&gt;</span></p>
+		<img class="font-img" src="img/merriweather-min.png">
+
+		<p><strong>Rubik</strong></p>
+		<p>Rubik is a <em>sans-serif</em> typeface characterised by its rounded corners. Pair Rubik with Merriweather, Playfair Display or Lobster 2. Rubik also works well as a heading typeface, and can be paired with Roboto or Open Sans body copy.<br>
+		<span class="underline">&lt;link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet"&gt;</span></p>
+		<img class="font-img" src="img/rubik-min.png">
+
+	</div>
+
 
 	<div class="card full-screen-card" id="components">
 		<h2 id="colors">Add Colors</h2>
@@ -145,8 +193,8 @@
 	<footer class="footer-bottom">
 		<a href="#home">Home</a>
 		<a href="#get-started">Getting Started</a>
+		<a href="#fonts">Fonts</a>
 		<a href="#colors">Colors</a>
-		<a href="#cards">Cards</a>
 		<!-- <a href="#jsvar">JS Plugin</a> -->
 		<br><br>
 		<a href="https://andreobriennz.com">Created by Andre O'Brien</a>
