--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Vario Library</title>
+	<title>Vario Colour and Font Library</title>
 
 	<link rel="icon" type="image/x-icon" href="img/logo.png">
 
@@ -122,73 +122,6 @@
 		<br><br>
 	</div>
 
-	<!-- <div class="card full-screen-card" id="menus">
-		<h2>VariableCSS Menus</h2>
-			<pre class="dark-grey">
-			<strong>Create triangle nav.</strong>
-			Ideal for single page websites.
-			&lt;header class="triangle-nav"&gt;
-				&lt;nav class="triangle-nav"&gt;
-				&lt;a href="#"&gt;
-					&lt;img src="#" class="logo triangle-nav"&gt;
-				&lt;/a&gt;
-				&lt;/nav&gt;
-			&lt;/header&gt;
-			</pre>
-
-			<pre class="dark-grey">
-			<strong>Create clear nav.</strong>
-			Ideal for simple minimalist websites.
-			&lt;nav class="clear-nav"&gt;
-				&lt;a href="#home" class="logo"&gt;
-					&lt;img src="#" class="clear-nav"&gt;
-				&lt;/a&gt;
-				&lt;a href="#home">Home&lt;/a&gt;
-				&lt;a href="#get-started"&gt;Get Started&lt;/a&gt;
-				&lt;a href="#components"&gt;Components&lt;/a&gt;
-			&lt;nav&gt;
-			</pre>
-	</div> -->
-
-<!-- 	<div class="card full-screen-card" id="cards">
-		<h2>Add Cards</h2>
-		<p><strong>Creating a card is easy.</strong><br>Create a div with a class of either 'card' or 'rounded-card' depending on the desired sharpness of the corners.<br>Add the class to state the size of the card. Add a color.<br><br><strong>Size classes are listed below:</strong><br>.full-screen-card (takes up 95% of the viewport); <br>.max-screen-card (takes up 100% of viewport); <br>.half-screen-card (takes up half of viewport width); <br>.quarter-screen-card (takes up a quarter of the viewort width); <br>.eigth-screen-card (takes up an eigth of the viewport width); <br>.third-screen-card (takes up a third of the viewport width); <br>.fifth-screen-card (takes up a fifth of the viewport width) <br><br><strong>Examples:</strong>
-		</p>
-		<div class="rounded-card quarter-screen-card medium-green"><strong>Classes:</strong><br>.rounded-card <br>.quarter-screen-card</div>
-		<br>
-		<div class="square-card third-screen-card medium-green"><strong>Classes:</strong><br>.square-card <br>.third-screen-card</div>
-		<br>
-		<br>
-	</div> -->
-
-	<!-- <div class="card full-screen-card" id="buttons">
-		<h2>VariableCSS Buttons</h2>
-		<button class="button">.button</button><br>
-		<button class="square-button">.square-button</button><br>
-		<br>
-		<button class="button small-button">.small-button</button><br>
-		<button class="square-button small-button">.small-square-button</button><br>
-		<br>
-		<button class="button medium-button">.medium-button</button><br>
-		<button class="square-button medium-button">.medium-square-button</button><br>
-		<br>
-		<button class="button large-button">.large-button</button><br>
-		<button class="square-button large-button">.large-square-button</button><br>
-	</div> -->
-
-	<!-- <div class="card full-screen-card" id="cssvar">
-		<h2>CSS and SASS Variable Colors</h2>
-	
-		<p>Note: CSS Variables have good support in most browsers, including Chrome, Firefox and Safari. However they are not yet supported in IE or Edge. Therefore, if using them, it is recommended to ensure the website is usable without CSS variables.<br>
-		SASS variables have no known issues.</p>
-	</div> -->
-
-	<!-- <div class="card full-screen-card background" id="jsvar">
-		<h2 class="hierarchy">JS Plugin</h2>
-		<p class="main">Now you can  use JavaScript to update HTML and CSS!</p>
-		<button onclick="darkTheme()" class="button large-button">Change to dark theme</button>
-		<button onclick="lightTheme()" class="button large-button">Change to light theme</button>
-	</div> -->
 
 	<footer class="footer-bottom">
 		<a href="#home">Home</a>
